# obs-python

./: .gitignore  CMakeLists.txt  obs-python-module.c  obs-python-module.h  obs-python-source.c  obs-python-source.h  py-obs.h  py-source.h  utils.h
data/locale/: en-US.ini
data/scripts/: OBSPythonManager.py  source.py
graphics/: py-graphics.h  py_gs_eparam_t.h  py_gs_texture_t.h
swig/: CMakeLists.txt  libobs.i  obspython.i
types/: gs_color_format.h  gs_draw_mode.h
